@@ -31,6 +31,8 @@ import io.netty.channel.ChannelFuture;
 import io.netty.channel.ChannelHandlerContext;
 import io.netty.handler.codec.http.HttpResponseStatus;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import javax.inject.Inject;
 import org.joda.time.Duration;
@@ -99,8 +101,8 @@ public class WebWhoisActionHandler extends ActionHandler {
       // Obtain url to be redirected to
       URL url;
       try {
-        url = new URL(response.headers().get("Location"));
-      } catch (MalformedURLException e) {
+        url = new URI(response.headers().get("Location")).toURL();
+      } catch (MalformedURLException | URISyntaxException | IllegalArgumentException e) {
         // in case of error, log it, and let ActionHandler's exceptionThrown method deal with it
         throw new FailureException(
             "Redirected Location was invalid. Given Location was: "
